test/spec_vectors/simd_i8x16_sat_arith/fail/module_24.wat
(module (func $i8x16.sub_sat_u-arg-empty (result v128) (i8x16.sub_sat_u)))